  the hashtables can be turned off for subMIPs to improve the performance, default value TRUE
- removed parameter constraints/knapsack/maxnumcardlift and adapted setting files
- added parameter <reading/zplreader/usestartsol> which allows to switch ZIMPL start solutions off, default value TRUE
- added parameter <lp/simplexrowrep> telling simplex solver to use row representation of the basis (if possible), default value FALSE
- added parameter <heuristics/crossover/dontwaitatroot> that allows to call crossover at root node independently from nwaitingnodes
- added parameter <heuristics/rens/uselprows> that allows to switch between LP row and SCIP constraints as basis for the subSCIP, 
  default is TRUE (uses LP rows)
- added parameter <constraints/knapsack/presolpairwise> that allows pairwise presolving of knapsack constraints, default is TRUE 
- added parameter <constraints/knapsack/presolusehashing> that allows fast pairwise presolving of knapsack constraints, default is TRUE 
- added parameter <constraints/indicator/noLinconsCon> which controls whether the linear constraint is not explicitly added to the problem. default is FALSE
- added parameter <constraints/indicator/enforceCuts> that allows to check for violated cust in enforcement
- added parameter <constraints/indicator/addCouplingCons> that allows to add variable upper bounds if addCoupling is true
- added parameter <constraints/indicator/maxCouplingValue> for the maximal value of the coefficient in a coupling inequality/constraint
- added parameter <branching/random/seed> to change the initial seed value of the branching rule random
- added parameter <branching/clamp> to set the minimal fractional distance of a branching point to a continuous variable' bounds
- added parameter <misc/permutationseed> to change the permutation seed value for permuting the problem after the problem is transformed (-1 means no permutation)
- added parameter <heuristics/nlp/nlpsolver> to specify name of NLP solver to use