@@ -12,7 +12,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: set.c,v 1.232 2010/08/06 10:42:19 bzfberth Exp $"
+#pragma ident "@(#) $Id: set.c,v 1.233 2010/08/11 02:24:24 bzfgleix Exp $"
 
 /**@file   set.c
  * @brief  methods for global SCIP settings
@@ -168,7 +168,8 @@
 #define SCIP_DEFAULT_LP_LEXDUALROOTONLY    TRUE /**< should the lexicographic dual algorithm be applied only at the root node */
 #define SCIP_DEFAULT_LP_LEXDUALMAXROUNDS      2 /**< maximum number of rounds in the dual lexicographic algorithm */
 #define SCIP_DEFAULT_LP_LEXDUALBASIC      FALSE /**< choose fractional basic variables in lexicographic dual algorithm */
-#define SCIP_DEFAULT_LP_SIMPLEXROWREP     FALSE /**< should simplex algorithm use row representation of the basis? */
+#define SCIP_DEFAULT_LP_ROWREPSWITCH      1e+20 /**< simplex algorithm shall use row representation of the basis
+                                                 *   if number of rows divided by number of columns exceeds this value */
 #define SCIP_DEFAULT_LP_THREADS               0 /**< number of threads used for solving the LP (0: automatic) */
 
 /* NLP */
@@ -995,10 +996,10 @@ SCIP_RETCODE SCIPsetCreate(
          "choose fractional basic variables in lexicographic dual algorithm?",
          &(*set)->lp_lexdualbasic, TRUE, SCIP_DEFAULT_LP_LEXDUALBASIC,
          NULL, NULL) );
-   SCIP_CALL( SCIPsetAddBoolParam(*set, blkmem,
-         "lp/simplexrowrep",
-         "should simplex algorithm use row representation of the basis?",
-         &(*set)->lp_simplexrowrep, TRUE, SCIP_DEFAULT_LP_SIMPLEXROWREP,
+   SCIP_CALL( SCIPsetAddRealParam(*set, blkmem,
+         "lp/rowrepswitch",
+         "simplex algorithm shall use row representation of the basis if number of rows divided by number of columns exceeds this value",
+         &(*set)->lp_rowrepswitch, TRUE, SCIP_DEFAULT_LP_ROWREPSWITCH, 0.0, SCIP_REAL_MAX,
          NULL, NULL) );
    SCIP_CALL( SCIPsetAddIntParam(*set, blkmem,
          "lp/threads",
